wiring in react and typescript

--- a/doogledoor/templates/pages/home.html.jinja
+++ b/doogledoor/templates/pages/home.html.jinja
@@ -4,5 +4,6 @@ endblock %}
 {% block content %}
 
 <p>Hello Doog</p>
+<div id="doogle"></div>
 <script src="{{ url_for('static', filename='dist/bundle.js')}}"></script>
 {% endblock %}
