--- a/doogledoor/templates/pages/base.html.jinja
+++ b/doogledoor/templates/pages/base.html.jinja
@@ -2,11 +2,11 @@
 <title> DoogleDoor {% block title %}{% endblock %}</title>
 </head>
 
-<body>
-    {% include "./partials/nav.html.jinja" %}
-    <main>
-        <div>
+<body class="text-center">
+    <div class="container d-flex h-100 flex-column">
+        {% include "./partials/nav.html.jinja" %}
+
+        <main role="main">
             {% block content%}{%endblock%}
-        </div>
-    </main>
-    {% include "./partials/footer.html.jinja" %}
+        </main>
+        {% include "./partials/footer.html.jinja" %}
