--- a/doogledoor/templates/partials/footer.html.jinja
+++ b/doogledoor/templates/partials/footer.html.jinja
@@ -1,23 +1,22 @@
-<footer
-    class="container-fluid footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 p-2 shadow-sm">
+<footer class="container-fluid footer mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 p-2 ">
     <div class="container">
         <div class="row">
             <div class="col-4 d-flex align-items-center">
-                <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none ">
+                <a href="/" class="mb-3 me-2 mb-md-0 text-body-primary text-decoration-none ">
                     <img src="{{ url_for('static', filename='img/favicon.ico') }}" class="bi" width="30" height="24" />
                 </a>
-                <span class="mb-3 mb-md-0 text-body-secondary" style="font-size: 1.5rem"><a class="navbar-brand"
+                <span class="mb-3 mb-md-0 text-body-primary" style="font-size: 1.5rem"><a class="navbar-brand"
                         href="https://www.jsulz.com">jsulz</a></span>
             </div>
 
             <ul class="nav col-8 justify-content-end list-unstyled d-flex">
                 <li class="ms-3">
-                    <a class="text-body-secondary" href="https://www.linkedin.com/in/jaredsulzdorf">
+                    <a class="text-body-primary" href="https://www.linkedin.com/in/jaredsulzdorf">
                         <i class="bi-linkedin"></i>
                     </a>
                 </li>
                 <li class="ms-3">
-                    <a class="text-body-secondary" href="https://github.com/jsulz">
+                    <a class="text-body-primary" href="https://github.com/jsulz">
                         <i height="24" width="24" class="bi-github"></i>
                     </a>
                 </li>
