wiring in styling and getting default formatters working again

--- a/doogledoor/static/css/style.css
+++ b/doogledoor/static/css/style.css
@@ -1,28 +1,31 @@
 /* CSS Variable overrides */
 :root {
-    --bs-link-color-rgb: var(--bs-secondary-rgb);
-    --bs-link-color-rgba: #d95229;
-    --bs-link-hover-color-rgb: #d95229;
-    --bs-primary-rgb: rgba(0, 0, 0, 0.65);
-    --bs-secondary-rgb: #FFF;
-    --bs-body-font-family: 'Protest Strike', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --bs-tertiary-rgb: #434b36;
-    --bs-tertiary-rgb-active: #1f6e56;
-    --bs-heading-color: #596447;
-    --bs-btn-hover-color: var(--bs-tertiary-rgb-active);
+  --bs-link-color-rgb: var(--bs-secondary-rgb);
+  --bs-link-color-rgba: #c27f61;
+  --bs-link-hover-color-rgb: #c27f61;
+  --bs-btn-bg: #c27f61;
+  --bs-primary-rgb: #353f42;
+  --bs-secondary-rgb: #fff;
+  --bs-body-font-family: "Protest Strike", system-ui, -apple-system, "Segoe UI",
+    Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-tertiary-rgb: #61adc2;
+  --bs-tertiary-rgb-active: #1f6e56;
+  --bs-heading-color: #c29f61;
+  --bs-btn-hover-color: var(--bs-tertiary-rgb-active);
 }
 
 /* Global */
 
 ::selection {
-    background: var(--bs-link-color-rgba)
+  background: var(--bs-link-color-rgba);
 }
 
 html,
 body {
   height: 100%;
   background: var(--bs-primary-rgb);
-  color: var(--bs-secondary-rgb)
+  color: var(--bs-secondary-rgb);
 }
 
 body {
@@ -34,13 +37,23 @@ body {
   justify-content: center;
 }
 
-a, a.nav-link {
-    color: var(--bs-link-color-rgb);
-    text-decoration: underline; 
+a,
+a.nav-link {
+  color: var(--bs-link-color-rgb);
+  text-decoration: underline;
+}
+
+a:hover,
+a:active,
+.nav-link:hover,
+.nav-link:active,
+.navbar-brand:hover,
+.navbar-brand:active {
+  color: var(--bs-link-hover-color-rgb);
 }
 
 .navbar-brand {
-    color: var(--bs-link-color-rgb);
+  color: var(--bs-link-color-rgb);
 }
 
 /*
@@ -52,4 +65,24 @@ a, a.nav-link {
 
 .masthead-brand {
   margin-bottom: 0;
+}
+
+.doogle-heading {
+  text-shadow: 5px 5px 2px black;
+  font-size: 80px;
+}
+
+.btn-outline-primary {
+  --bs-btn-color: var(--bs-tertiary-rgb);
+  --bs-btn-border-color: var(--bs-tertiary-rgb);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: var(--bs-heading-color);
+  --bs-btn-hover-border-color: var(--bs-heading-color);
+  --bs-btn-focus-shadow-rgb: 13, 110, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: var(--bs-link-color-rgba);
+  --bs-btn-active-border-color: var(--bs-link-color-rgba);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: transparent;
+  --bs-gradient: none;
 }
