--- a/doogledoor/templates/pages/home.html.jinja
+++ b/doogledoor/templates/pages/home.html.jinja
@@ -2,8 +2,7 @@
 {% block header %}Welcome to Sturmbaum{%
 endblock %}
 {% block content %}
-<div>
-    <p>Hello Doog</p>
+<div class="mt-5">
     <div id="doogle"></div>
 </div>
 <script src="{{ url_for('static', filename='dist/bundle.js')}}"></script>
