--- a/doogledoor/templates/partials/nav.html.jinja
+++ b/doogledoor/templates/partials/nav.html.jinja
@@ -1,7 +1,10 @@
 <header class="mb-auto">
     <nav class="navbar navbar-expand-md  fixed-top">
         <div class="container">
-            <a class="navbar-brand text-body-primary" href="/">Doogledoor</a>
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-primary text-decoration-none ">
+                <img src="{{ url_for('static', filename='img/favicon.ico') }}" class="bi" width="30" height="24" />
+            </a>
+            <a class="navbar-brand" href="/">Doogledoor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
