--- a/doogledoor/templates/partials/header.html.jinja
+++ b/doogledoor/templates/partials/header.html.jinja
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
-    <meta name="description" content="Tracking the doogle, whereever she me go. But mostly in and out the door.">
+    <meta name="description" content="Tracking the doogle, whereever she may go. But mostly in and out the door.">
     <meta name="author" content="Jared Sulzdorf" />
     <meta property="og:title" content="Doogledoor" />
     <meta property="og:description" content="Tracking the doogle, whereever she me go. But mostly in and out the door">
@@ -19,4 +19,5 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital@0;1&display=swap" rel="stylesheet">
     <link href='static/css/style.css' rel="stylesheet" />
