--- a/doogledoor/templates/partials/nav.html.jinja
+++ b/doogledoor/templates/partials/nav.html.jinja
@@ -1,5 +1,5 @@
 <header class="mb-auto">
-    <nav class="navbar navbar-expand-md  fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top">
         <div class="container">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-primary text-decoration-none ">
                 <img src="{{ url_for('static', filename='img/favicon.ico') }}" class="bi" width="30" height="24" />
@@ -10,7 +10,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end text-right" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
