updating content and styles

--- a/doogledoor/templates/partials/header.html.jinja
+++ b/doogledoor/templates/partials/header.html.jinja
@@ -8,7 +8,7 @@
     <meta name="description" content="Tracking the doogle, whereever she may go. But mostly in and out the door.">
     <meta name="author" content="Jared Sulzdorf" />
     <meta property="og:title" content="Doogledoor" />
-    <meta property="og:description" content="Tracking the doogle, whereever she me go. But mostly in and out the door">
+    <meta property="og:description" content="Tracking the doogle, whereever she may go. But mostly in and out the door">
     <meta property="og:url" content="https://doogledoor.jsulz.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Doogledoor" />
