--- a/doogledoor/static/css/style.css
+++ b/doogledoor/static/css/style.css
@@ -45,6 +45,14 @@ body {
   font-size: 18px;
 }
 
+.about a {
+  color: var(--bs-tertiary-rgb-active);
+}
+
+.lead {
+  font-size: 24px;
+}
+
 a,
 a.nav-link {
   color: var(--bs-link-color-rgb);
