wrapping up about and README for now

--- a/doogledoor/templates/pages/about.html.jinja
+++ b/doogledoor/templates/pages/about.html.jinja
@@ -15,11 +15,13 @@
                     that goes out to our deck and backyard, and is used predominately by the doogle. To make this go, I
                     used the following components from Sparkfun:</p>
                 <ul>
-                    <li>Thing Plus - ESP32-S2 WROOM</li>
-                    <li>OpenPIR</li>
+                    <li><a href="https://www.sparkfun.com/products/17743">Thing Plus - ESP32-S2 WROOM</a></li>
+                    <li><a href="https://www.sparkfun.com/products/13968">OpenPIR motion sensor</a></li>
                 </ul>
-                <p>The code that runs the Thing Plus is written in C++ and available on GitHub.</p>
-                <p>As for how you're seeing this website? That's also all available on GiHub with the full stack as
+                <p>The code that runs the Thing Plus is written in C++ and <a
+                        href="https://github.com/jsulz/dooglebot">available on GitHub</a>.</p>
+                <p>As for how you're seeing this website? That's also all <a
+                        href="https://github.com/jsulz/doogledoor">available on GiHub</a> with the full stack as
                     follows:</p>
                 <ul>
                     <li><a href="https://cloud.google.com/?hl=en">Google Cloud Platform</a> (specifically <a
