--- a/doogledoor/templates/pages/about.html.jinja
+++ b/doogledoor/templates/pages/about.html.jinja
@@ -1,6 +1,6 @@
 {% extends "/pages/base.html.jinja" %}
 {% block content %}
-<div class="row justify-content-center about text-start">
+<div class="mt-5 row justify-content-center about text-start">
     <div class="p-2 mb-4 bg-body-tertiary-rgba rounded-3 col-10">
         <div class="container-fluid py-2">
             <div class="col-md-12">
@@ -37,5 +37,8 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 
 {% endblock %}
