spelling is hard

--- a/doogledoor/templates/pages/about.html.jinja
+++ b/doogledoor/templates/pages/about.html.jinja
@@ -21,7 +21,7 @@
                 <p>The code that runs the Thing Plus is written in C++ and <a
                         href="https://github.com/jsulz/dooglebot">available on GitHub</a>.</p>
                 <p>As for how you're seeing this website? That's also all <a
-                        href="https://github.com/jsulz/doogledoor">available on GiHub</a> with the full stack as
+                        href="https://github.com/jsulz/doogledoor">available on GitHub</a> with the full stack as
                     follows:</p>
                 <ul>
                     <li><a href="https://cloud.google.com/?hl=en">Google Cloud Platform</a> (specifically <a
